<resources>
    <string name="app_name">CocktailApp</string>
    <string name="search_text">Search</string>
    <string name="categories_text">Categories</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="search_bar_hint">Search</string>
    <string name="random_text">Random cocktail</string>
    <string name="random_cocktail_button">Get a random cocktail</string>
    <string name="image_description">image description</string>
    <string name="no_result_message">No Result Found</string>
    <string name="ingredient_option">Ingredients</string>
    <string name="instruction_option">Instructions</string>
    <string name="search_button_description">Search cocktail</string>
    <string name="favorite_button_description">Like cocktail</string>
    <string name="cocktail_detail_category">Category: %1$s</string>
    <string name="cocktail_detail_glass">Served in %1$s</string>
    <string name="cocktail_detail_no_tag">No tag</string>
    <string name="detail_back_title">Go Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_text">Favorite cocktails</string>
    <string name="no_favorite_cocktail_yet">No favorite cocktail yet</string>
</resources>